compiler-code/y.output
Terminals unused in grammar

   ASS
   CLASSDEC
   STATIC_VARDEC
   VARDEC
   STATIC_ROTINE
   ROTINE
   CONSTRUCTOR
   PARAMLIST
   STATEMENTS
   VARLIST
   CONSTRUCTORCALL
   ARRAY
   FUNCTIONCALL
   METHODCALL
   EXPRLIST
   INT
   VOID
   CHAR
   BOOL


Grammar

    0 $accept: program $end

    1 program: programstructure_

    2 $@1: %empty

    3 programstructure_: importstatements $@1 programstructure

    4 importstatements: importstatements IMPORT IDENTIFIER
    5                 | %empty

    6 $@2: %empty

    7 programstructure: CLASS IDENTIFIER $@2 '{' classdeclarations '}'

    8 classdeclarations: classdeclarations classobjvardec
    9                  | classdeclarations classobjrotinedec
   10                  | %empty

   11 classobjvardec: STATIC vardec
   12               | vardec

   13 classobjrotinedec: STATIC rotinedec
   14                  | rotinedec
   15                  | constructordec

   16 constructordec: IDENTIFIER '(' parameterslist ')' '{' statements '}'

   17 rotinedec: rotineheader '(' parameterslist ')' '{' statements '}'

   18 rotineheader: type IDENTIFIER

   19 parameterslist: parameterslist ',' type IDENTIFIER
   20               | type IDENTIFIER
   21               | %empty

   22 statements: statements statement
   23           | %empty

   24 statement: ifstatement
   25          | ifelsestatement
   26          | whilestatement
   27          | returnstatement
   28          | subrotinecall ';'
   29          | assignmentstatement
   30          | vardec

   31 vardec: type varlist ';'

   32 varlist: varlist ',' IDENTIFIER
   33        | IDENTIFIER

   34 type: IDENTIFIER

   35 ifelsestatement: ifheader ifbody ELSE elsebody

   36 ifbody: '{' statements '}'

   37 elsebody: '{' statements '}'

   38 ifstatement: ifheader '{' statements '}'

   39 ifheader: IF '(' expr ')'

   40 whilestatement: whileheader '{' statements '}'

   41 whileheader: WHILE '(' expr ')'

   42 returnstatement: RETURN expr ';'
   43                | RETURN ';'

   44 assignmentstatement: lhs '=' expr ';'

   45 lhs: IDENTIFIER
   46    | IDENTIFIER '[' expr ']'

   47 expr: expr '+' expr
   48     | expr '-' expr
   49     | expr '*' expr
   50     | expr '/' expr
   51     | expr OR expr
   52     | expr AND expr
   53     | expr '<' expr
   54     | expr '>' expr
   55     | expr EQ expr
   56     | '-' expr
   57     | '!' expr
   58     | '(' expr ')'
   59     | term

   60 term: IDENTIFIER
   61     | IDENTIFIER '[' expr ']'
   62     | subrotinecall
   63     | INTCONSTANT
   64     | CHARCONST
   65     | STRINGCONSTANT
   66     | keywordconstant

   67 subrotinecall: IDENTIFIER '(' expr_list ')'
   68              | IDENTIFIER '.' IDENTIFIER '(' expr_list ')'
   69              | NEW IDENTIFIER '(' expr_list ')'

   70 expr_list: expr_list ',' expr
   71          | expr
   72          | %empty

   73 keywordconstant: THIS
   74                | True
   75                | False
   76                | Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 57
'(' (40) 16 17 39 41 58 67 68 69
')' (41) 16 17 39 41 58 67 68 69
'*' (42) 49
'+' (43) 47
',' (44) 19 32 70
'-' (45) 48 56
'.' (46) 68
'/' (47) 50
';' (59) 28 31 42 43 44
'<' (60) 53
'=' (61) 44
'>' (62) 54
'[' (91) 46 61
']' (93) 46 61
'{' (123) 7 16 17 36 37 38 40
'}' (125) 7 16 17 36 37 38 40
error (256)
ASS (258)
CLASSDEC (259)
STATIC_VARDEC (260)
VARDEC (261)
STATIC_ROTINE (262)
ROTINE (263)
CONSTRUCTOR (264)
PARAMLIST (265)
STATEMENTS (266)
VARLIST (267)
CONSTRUCTORCALL (268)
ARRAY (269)
FUNCTIONCALL (270)
METHODCALL (271)
EXPRLIST (272)
THIS (273) 73
True (274) 74
False (275) 75
Null (276) 76
IF (277) 39
ELSE (278) 35
WHILE (279) 41
RETURN (280) 42 43
INT (281)
STATIC (282) 11 13
CLASS (283) 7
VOID (284)
CHAR (285)
BOOL (286)
NEW (287) 69
IMPORT (288) 4
INTCONSTANT (289) 63
IDENTIFIER (290) 4 7 16 18 19 20 32 33 34 45 46 60 61 67 68 69
CHARCONST (291) 64
STRINGCONSTANT (292) 65
AND (293) 52
OR (294) 51
EQ (295) 55
UMINUS (296)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1, on right: 0
programstructure_ (61)
    on left: 3, on right: 1
$@1 (62)
    on left: 2, on right: 3
importstatements (63)
    on left: 4 5, on right: 3 4
programstructure (64)
    on left: 7, on right: 3
$@2 (65)
    on left: 6, on right: 7
classdeclarations (66)
    on left: 8 9 10, on right: 7 8 9
classobjvardec (67)
    on left: 11 12, on right: 8
classobjrotinedec (68)
    on left: 13 14 15, on right: 9
constructordec (69)
    on left: 16, on right: 15
rotinedec (70)
    on left: 17, on right: 13 14
rotineheader (71)
    on left: 18, on right: 17
parameterslist (72)
    on left: 19 20 21, on right: 16 17 19
statements (73)
    on left: 22 23, on right: 16 17 22 36 37 38 40
statement (74)
    on left: 24 25 26 27 28 29 30, on right: 22
vardec (75)
    on left: 31, on right: 11 12 30
varlist (76)
    on left: 32 33, on right: 31 32
type (77)
    on left: 34, on right: 18 19 20 31
ifelsestatement (78)
    on left: 35, on right: 25
ifbody (79)
    on left: 36, on right: 35
elsebody (80)
    on left: 37, on right: 35
ifstatement (81)
    on left: 38, on right: 24
ifheader (82)
    on left: 39, on right: 35 38
whilestatement (83)
    on left: 40, on right: 26
whileheader (84)
    on left: 41, on right: 40
returnstatement (85)
    on left: 42 43, on right: 27
assignmentstatement (86)
    on left: 44, on right: 29
lhs (87)
    on left: 45 46, on right: 44
expr (88)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59, on right: 39 41
    42 44 46 47 48 49 50 51 52 53 54 55 56 57 58 61 70 71
term (89)
    on left: 60 61 62 63 64 65 66, on right: 59
subrotinecall (90)
    on left: 67 68 69, on right: 28 62
expr_list (91)
    on left: 70 71 72, on right: 67 68 69 70
keywordconstant (92)
    on left: 73 74 75 76, on right: 66


State 0

    0 $accept: . program $end

    $default  reduce using rule 5 (importstatements)

    program            go to state 1
    programstructure_  go to state 2
    importstatements   go to state 3


State 1

    0 $accept: program . $end

    $end  shift, and go to state 4


State 2

    1 program: programstructure_ .

    $default  reduce using rule 1 (program)


State 3

    3 programstructure_: importstatements . $@1 programstructure
    4 importstatements: importstatements . IMPORT IDENTIFIER

    IMPORT  shift, and go to state 5

    $default  reduce using rule 2 ($@1)

    $@1  go to state 6


State 4

    0 $accept: program $end .

    $default  accept


State 5

    4 importstatements: importstatements IMPORT . IDENTIFIER

    IDENTIFIER  shift, and go to state 7


State 6

    3 programstructure_: importstatements $@1 . programstructure

    CLASS  shift, and go to state 8

    programstructure  go to state 9


State 7

    4 importstatements: importstatements IMPORT IDENTIFIER .

    $default  reduce using rule 4 (importstatements)


State 8

    7 programstructure: CLASS . IDENTIFIER $@2 '{' classdeclarations '}'

    IDENTIFIER  shift, and go to state 10


State 9

    3 programstructure_: importstatements $@1 programstructure .

    $default  reduce using rule 3 (programstructure_)


State 10

    7 programstructure: CLASS IDENTIFIER . $@2 '{' classdeclarations '}'

    $default  reduce using rule 6 ($@2)

    $@2  go to state 11


State 11

    7 programstructure: CLASS IDENTIFIER $@2 . '{' classdeclarations '}'

    '{'  shift, and go to state 12


State 12

    7 programstructure: CLASS IDENTIFIER $@2 '{' . classdeclarations '}'

    $default  reduce using rule 10 (classdeclarations)

    classdeclarations  go to state 13


State 13

    7 programstructure: CLASS IDENTIFIER $@2 '{' classdeclarations . '}'
    8 classdeclarations: classdeclarations . classobjvardec
    9                  | classdeclarations . classobjrotinedec

    STATIC      shift, and go to state 14
    IDENTIFIER  shift, and go to state 15
    '}'         shift, and go to state 16

    classobjvardec     go to state 17
    classobjrotinedec  go to state 18
    constructordec     go to state 19
    rotinedec          go to state 20
    rotineheader       go to state 21
    vardec             go to state 22
    type               go to state 23


State 14

   11 classobjvardec: STATIC . vardec
   13 classobjrotinedec: STATIC . rotinedec

    IDENTIFIER  shift, and go to state 24

    rotinedec     go to state 25
    rotineheader  go to state 21
    vardec        go to state 26
    type          go to state 23


State 15

   16 constructordec: IDENTIFIER . '(' parameterslist ')' '{' statements '}'
   34 type: IDENTIFIER .

    '('  shift, and go to state 27

    $default  reduce using rule 34 (type)


State 16

    7 programstructure: CLASS IDENTIFIER $@2 '{' classdeclarations '}' .

    $default  reduce using rule 7 (programstructure)


State 17

    8 classdeclarations: classdeclarations classobjvardec .

    $default  reduce using rule 8 (classdeclarations)


State 18

    9 classdeclarations: classdeclarations classobjrotinedec .

    $default  reduce using rule 9 (classdeclarations)


State 19

   15 classobjrotinedec: constructordec .

    $default  reduce using rule 15 (classobjrotinedec)


State 20

   14 classobjrotinedec: rotinedec .

    $default  reduce using rule 14 (classobjrotinedec)


State 21

   17 rotinedec: rotineheader . '(' parameterslist ')' '{' statements '}'

    '('  shift, and go to state 28


State 22

   12 classobjvardec: vardec .

    $default  reduce using rule 12 (classobjvardec)


State 23

   18 rotineheader: type . IDENTIFIER
   31 vardec: type . varlist ';'

    IDENTIFIER  shift, and go to state 29

    varlist  go to state 30


State 24

   34 type: IDENTIFIER .

    $default  reduce using rule 34 (type)


State 25

   13 classobjrotinedec: STATIC rotinedec .

    $default  reduce using rule 13 (classobjrotinedec)


State 26

   11 classobjvardec: STATIC vardec .

    $default  reduce using rule 11 (classobjvardec)


State 27

   16 constructordec: IDENTIFIER '(' . parameterslist ')' '{' statements '}'

    IDENTIFIER  shift, and go to state 24

    $default  reduce using rule 21 (parameterslist)

    parameterslist  go to state 31
    type            go to state 32


State 28

   17 rotinedec: rotineheader '(' . parameterslist ')' '{' statements '}'

    IDENTIFIER  shift, and go to state 24

    $default  reduce using rule 21 (parameterslist)

    parameterslist  go to state 33
    type            go to state 32


State 29

   18 rotineheader: type IDENTIFIER .
   33 varlist: IDENTIFIER .

    '('       reduce using rule 18 (rotineheader)
    $default  reduce using rule 33 (varlist)


State 30

   31 vardec: type varlist . ';'
   32 varlist: varlist . ',' IDENTIFIER

    ','  shift, and go to state 34
    ';'  shift, and go to state 35


State 31

   16 constructordec: IDENTIFIER '(' parameterslist . ')' '{' statements '}'
   19 parameterslist: parameterslist . ',' type IDENTIFIER

    ','  shift, and go to state 36
    ')'  shift, and go to state 37


State 32

   20 parameterslist: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 38


State 33

   17 rotinedec: rotineheader '(' parameterslist . ')' '{' statements '}'
   19 parameterslist: parameterslist . ',' type IDENTIFIER

    ','  shift, and go to state 36
    ')'  shift, and go to state 39


State 34

   32 varlist: varlist ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 40


State 35

   31 vardec: type varlist ';' .

    $default  reduce using rule 31 (vardec)


State 36

   19 parameterslist: parameterslist ',' . type IDENTIFIER

    IDENTIFIER  shift, and go to state 24

    type  go to state 41


State 37

   16 constructordec: IDENTIFIER '(' parameterslist ')' . '{' statements '}'

    '{'  shift, and go to state 42


State 38

   20 parameterslist: type IDENTIFIER .

    $default  reduce using rule 20 (parameterslist)


State 39

   17 rotinedec: rotineheader '(' parameterslist ')' . '{' statements '}'

    '{'  shift, and go to state 43


State 40

   32 varlist: varlist ',' IDENTIFIER .

    $default  reduce using rule 32 (varlist)


State 41

   19 parameterslist: parameterslist ',' type . IDENTIFIER

    IDENTIFIER  shift, and go to state 44


State 42

   16 constructordec: IDENTIFIER '(' parameterslist ')' '{' . statements '}'

    $default  reduce using rule 23 (statements)

    statements  go to state 45


State 43

   17 rotinedec: rotineheader '(' parameterslist ')' '{' . statements '}'

    $default  reduce using rule 23 (statements)

    statements  go to state 46


State 44

   19 parameterslist: parameterslist ',' type IDENTIFIER .

    $default  reduce using rule 19 (parameterslist)


State 45

   16 constructordec: IDENTIFIER '(' parameterslist ')' '{' statements . '}'
   22 statements: statements . statement

    IF          shift, and go to state 47
    WHILE       shift, and go to state 48
    RETURN      shift, and go to state 49
    NEW         shift, and go to state 50
    IDENTIFIER  shift, and go to state 51
    '}'         shift, and go to state 52

    statement            go to state 53
    vardec               go to state 54
    type                 go to state 55
    ifelsestatement      go to state 56
    ifstatement          go to state 57
    ifheader             go to state 58
    whilestatement       go to state 59
    whileheader          go to state 60
    returnstatement      go to state 61
    assignmentstatement  go to state 62
    lhs                  go to state 63
    subrotinecall        go to state 64


State 46

   17 rotinedec: rotineheader '(' parameterslist ')' '{' statements . '}'
   22 statements: statements . statement

    IF          shift, and go to state 47
    WHILE       shift, and go to state 48
    RETURN      shift, and go to state 49
    NEW         shift, and go to state 50
    IDENTIFIER  shift, and go to state 51
    '}'         shift, and go to state 65

    statement            go to state 53
    vardec               go to state 54
    type                 go to state 55
    ifelsestatement      go to state 56
    ifstatement          go to state 57
    ifheader             go to state 58
    whilestatement       go to state 59
    whileheader          go to state 60
    returnstatement      go to state 61
    assignmentstatement  go to state 62
    lhs                  go to state 63
    subrotinecall        go to state 64


State 47

   39 ifheader: IF . '(' expr ')'

    '('  shift, and go to state 66


State 48

   41 whileheader: WHILE . '(' expr ')'

    '('  shift, and go to state 67


State 49

   42 returnstatement: RETURN . expr ';'
   43                | RETURN . ';'

    THIS            shift, and go to state 68
    True            shift, and go to state 69
    False           shift, and go to state 70
    Null            shift, and go to state 71
    NEW             shift, and go to state 50
    INTCONSTANT     shift, and go to state 72
    IDENTIFIER      shift, and go to state 73
    CHARCONST       shift, and go to state 74
    STRINGCONSTANT  shift, and go to state 75
    '-'             shift, and go to state 76
    '('             shift, and go to state 77
    '!'             shift, and go to state 78
    ';'             shift, and go to state 79

    expr             go to state 80
    term             go to state 81
    subrotinecall    go to state 82
    keywordconstant  go to state 83


State 50

   69 subrotinecall: NEW . IDENTIFIER '(' expr_list ')'

    IDENTIFIER  shift, and go to state 84


State 51

   34 type: IDENTIFIER .
   45 lhs: IDENTIFIER .
   46    | IDENTIFIER . '[' expr ']'
   67 subrotinecall: IDENTIFIER . '(' expr_list ')'
   68              | IDENTIFIER . '.' IDENTIFIER '(' expr_list ')'

    '['  shift, and go to state 85
    '('  shift, and go to state 86
    '.'  shift, and go to state 87

    '='       reduce using rule 45 (lhs)
    $default  reduce using rule 34 (type)


State 52

   16 constructordec: IDENTIFIER '(' parameterslist ')' '{' statements '}' .

    $default  reduce using rule 16 (constructordec)


State 53

   22 statements: statements statement .

    $default  reduce using rule 22 (statements)


State 54

   30 statement: vardec .

    $default  reduce using rule 30 (statement)


State 55

   31 vardec: type . varlist ';'

    IDENTIFIER  shift, and go to state 88

    varlist  go to state 30


State 56

   25 statement: ifelsestatement .

    $default  reduce using rule 25 (statement)


State 57

   24 statement: ifstatement .

    $default  reduce using rule 24 (statement)


State 58

   35 ifelsestatement: ifheader . ifbody ELSE elsebody
   38 ifstatement: ifheader . '{' statements '}'

    '{'  shift, and go to state 89

    ifbody  go to state 90


State 59

   26 statement: whilestatement .

    $default  reduce using rule 26 (statement)


State 60

   40 whilestatement: whileheader . '{' statements '}'

    '{'  shift, and go to state 91


State 61

   27 statement: returnstatement .

    $default  reduce using rule 27 (statement)


State 62

   29 statement: assignmentstatement .

    $default  reduce using rule 29 (statement)


State 63

   44 assignmentstatement: lhs . '=' expr ';'

    '='  shift, and go to state 92


State 64

   28 statement: subrotinecall . ';'

    ';'  shift, and go to state 93


State 65

   17 rotinedec: rotineheader '(' parameterslist ')' '{' statements '}' .

    $default  reduce using rule 17 (rotinedec)


State 66

   39 ifheader: IF '(' . expr ')'

    THIS            shift, and go to state 68
    True            shift, and go to state 69
    False           shift, and go to state 70
    Null            shift, and go to state 71
    NEW             shift, and go to state 50
    INTCONSTANT     shift, and go to state 72
    IDENTIFIER      shift, and go to state 73
    CHARCONST       shift, and go to state 74
    STRINGCONSTANT  shift, and go to state 75
    '-'             shift, and go to state 76
    '('             shift, and go to state 77
    '!'             shift, and go to state 78

    expr             go to state 94
    term             go to state 81
    subrotinecall    go to state 82
    keywordconstant  go to state 83


State 67

   41 whileheader: WHILE '(' . expr ')'

    THIS            shift, and go to state 68
    True            shift, and go to state 69
    False           shift, and go to state 70
    Null            shift, and go to state 71
    NEW             shift, and go to state 50
    INTCONSTANT     shift, and go to state 72
    IDENTIFIER      shift, and go to state 73
    CHARCONST       shift, and go to state 74
    STRINGCONSTANT  shift, and go to state 75
    '-'             shift, and go to state 76
    '('             shift, and go to state 77
    '!'             shift, and go to state 78

    expr             go to state 95
    term             go to state 81
    subrotinecall    go to state 82
    keywordconstant  go to state 83


State 68

   73 keywordconstant: THIS .

    $default  reduce using rule 73 (keywordconstant)


State 69

   74 keywordconstant: True .

    $default  reduce using rule 74 (keywordconstant)


State 70

   75 keywordconstant: False .

    $default  reduce using rule 75 (keywordconstant)


State 71

   76 keywordconstant: Null .

    $default  reduce using rule 76 (keywordconstant)


State 72

   63 term: INTCONSTANT .

    $default  reduce using rule 63 (term)


State 73

   60 term: IDENTIFIER .
   61     | IDENTIFIER . '[' expr ']'
   67 subrotinecall: IDENTIFIER . '(' expr_list ')'
   68              | IDENTIFIER . '.' IDENTIFIER '(' expr_list ')'

    '['  shift, and go to state 96
    '('  shift, and go to state 86
    '.'  shift, and go to state 87

    $default  reduce using rule 60 (term)


State 74

   64 term: CHARCONST .

    $default  reduce using rule 64 (term)


State 75

   65 term: STRINGCONSTANT .

    $default  reduce using rule 65 (term)


State 76

   56 expr: '-' . expr

    THIS            shift, and go to state 68
    True            shift, and go to state 69
    False           shift, and go to state 70
    Null            shift, and go to state 71
    NEW             shift, and go to state 50
    INTCONSTANT     shift, and go to state 72
    IDENTIFIER      shift, and go to state 73
    CHARCONST       shift, and go to state 74
    STRINGCONSTANT  shift, and go to state 75
    '-'             shift, and go to state 76
    '('             shift, and go to state 77
    '!'             shift, and go to state 78

    expr             go to state 97
    term             go to state 81
    subrotinecall    go to state 82
    keywordconstant  go to state 83


State 77

   58 expr: '(' . expr ')'

    THIS            shift, and go to state 68
    True            shift, and go to state 69
    False           shift, and go to state 70
    Null            shift, and go to state 71
    NEW             shift, and go to state 50
    INTCONSTANT     shift, and go to state 72
    IDENTIFIER      shift, and go to state 73
    CHARCONST       shift, and go to state 74
    STRINGCONSTANT  shift, and go to state 75
    '-'             shift, and go to state 76
    '('             shift, and go to state 77
    '!'             shift, and go to state 78

    expr             go to state 98
    term             go to state 81
    subrotinecall    go to state 82
    keywordconstant  go to state 83


State 78

   57 expr: '!' . expr

    THIS            shift, and go to state 68
    True            shift, and go to state 69
    False           shift, and go to state 70
    Null            shift, and go to state 71
    NEW             shift, and go to state 50
    INTCONSTANT     shift, and go to state 72
    IDENTIFIER      shift, and go to state 73
    CHARCONST       shift, and go to state 74
    STRINGCONSTANT  shift, and go to state 75
    '-'             shift, and go to state 76
    '('             shift, and go to state 77
    '!'             shift, and go to state 78

    expr             go to state 99
    term             go to state 81
    subrotinecall    go to state 82
    keywordconstant  go to state 83

